=================================
2014/01/02: Version 1.91 alpha 1
=================================

- Under Construction

=================================
2013/05/12: Version 1.39 RC 1
=================================

- Added minimum php textbox in admin/modules.php
- Added minimum xoops textbox in admin/modules.php
- Added minimum admin textbox in admin/modules.php
- Added minimum mysql textbox in admin/modules.php
- fixed bugs

=================================
2013/04/01: Version 1.39 Beta 4
=================================

- fixed several error notices and bugs

=================================
2013/03/28: Version 1.39 Beta 3
=================================

- fixed several error notices and bugs

=================================
2013/03/25: Version 1.39 Beta 2
=================================

- fixed several error notices and bugs

=================================
2013/03/22: Version 1.39 Beta 1
=================================

- fixed several error notices and bugs

=================================
2013/02/23: Version 1.38.6 Beta 1
=================================

- added: fields notifications, paypal button and subversion in modules
- added: fields notifications in tables
- modified: file const_header.php for subversion
- modified: file const_admin_about.php for paypal button
- added: module info pulled from Preferences
- fixed several error notices and bugs

=================================
2012/09/24: Version 1.38.1 Beta 1
=================================

- added: option to rename module and tables
- added: generated tables start with "mod_"
- added: logo image generator
- added: user info stored in Preferences
- added: module info pulled from Preferences
- added: plugins for Waiting module
- clean-up of English translations, and constants
- fixed several error notices and bugs

=================================
2012/07/13: Version 1.38 Final
=================================

- Fixed bug (Timgno)